# pytorch_callback_minimal_example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
src/cpp/: CMakeLists.txt
src/cpp/cb_test/: libcbtest.cpp
src/python/cb_test/: __main__.py
src/python/cb_test/_C/: __init__.pyi
